[package]
name = "openclawtunnelpro-win"
version = "3.5.0"
description = "OpenClaw Tunnel Pro - Windows Native Edition"
authors = ["Eyesslee"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9"
regex = "1"
rand = "0.8"
